--- a/css/styles.css
+++ b/css/styles.css
@@ -1,34 +1,92 @@
 body {
-    font-family: 'Rajdhani', sans-serif;
-    font-size: 20px;
-    background-color: rgb(251, 253, 253);;
-  }
-  
+  font-family: 'Rajdhani', sans-serif;
+  font-size: 20px;
+  background-color: rgb(251, 253, 253);
+}
+
 .container {
-    width: 100%;
-    display: flex;
-    align-items: center;
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .h1 {
-    margin-left: 5%;
+  margin-left: 5%;
 }
 
 ul {
-    list-style-type: none;
-    padding-left: 0;
-    margin-top: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-  }
+  list-style-type: none;
+  padding-left: 0;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
 
-  .pokemon-button {
-    margin: 2px;
-    width: 100%;
-    height: 70px;
-    text-align: left;
-    padding-left: 10px;
-    font-size: 26px;
-    background-color: #feffca;
-    opacity: 0.8;
-  }
+.pokemon-button {
+  margin: 2px;
+  width: 100%;
+  height: 70px;
+  text-align: left;
+  padding-left: 10px;
+  font-size: 26px;
+  background-color: #feffca;
+  opacity: 0.8;
+}
+
+#modal-container {
+  display: none;
+}
+
+#modal-container.is-visible {
+  position: fixed;
+  padding: 20px;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: grid;
+  text-align: center;
+
+  /* to show it above other content */
+  z-index: 999;
+
+  /* to allow scrolling if the screen is not high enough*/
+  overflow: auto;
+}
+
+.modal {
+  margin: auto;
+  display: inline-block;
+  background: #fff;
+  padding: 15px;
+  width: 60%;
+  max-width: 700px;
+  text-align: left;
+}
+
+.modal-close {
+  float: right;
+  -webkit-appearance: none;
+  border: 0;
+  background: none;
+  color: #777;
+  text-decoration: underline;
+}
+
+.modal h1 {
+  margin-top: 0;
+}
+
+.modal p {
+  margin-bottom: 0;
+}
+
+@media screen and (max-width: 992px) {
+  
+}
+
+@media screen and (max-width: 600px) {
+  
+}
