--- a/css/styles.css
+++ b/css/styles.css
@@ -17,9 +17,7 @@ body {
 ul {
   list-style-type: none;
   padding-left: 0;
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin: 10px 10px 0px 10px;
 }
 
 .pokemon-button {
@@ -88,5 +86,12 @@ ul {
 }
 
 @media screen and (max-width: 600px) {
+  .container {
+    display: block;
+  }
+
+  .h1 {
+    margin-left: 0%;
+  }
   
 }
